@@ -51,7 +51,7 @@ public class AttachFileAction extends SimpleCommand {
 
         BibDatabaseContext databaseContext = stateManager.getActiveDatabase().get();
 
-        BibEntry entry = stateManager.getSelectedEntries().get(0);
+        BibEntry entry = stateManager.getSelectedEntries().getFirst();
 
         Path workingDirectory = databaseContext.getFirstExistingFileDir(filePreferences)
                                                .orElse(filePreferences.getWorkingDirectory());
